--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /******************************************
-/* BASE STYLES
+/* BASE STYLES 
 /*******************************************/
 
 /* Box Model Hack */
@@ -49,7 +49,7 @@ body {
 }
 
 /******************************************
-/* LAYOUT
+/* LAYOUT - Index.html
 /*******************************************/
 /* Header */
 header {
@@ -246,7 +246,7 @@ footer>img {
 }
 
 /******************************************
-/* ADDITIONAL STYLES
+/* ADDITIONAL STYLES - Index.html
 /*******************************************/
 @media screen and (max-width: 1000px) {
      header {
@@ -328,3 +328,41 @@ footer>img {
           width: 95%;
      }
 }
+
+/******************************************
+/* LAYOUT - companies.html
+/*******************************************/
+#addAJob {
+     width: 90%;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: center;
+     margin: auto;
+}
+
+#addJobForm {
+     border: 1px solid black;
+}
+
+#addAJob form, #addJobForm {
+     width: 100%;
+     padding: 2%;
+     margin: 2%;
+     display: flex;
+     flex-wrap: wrap;
+     justify-content: space-evenly;
+     align-items: center;
+}
+
+#addAJob .formBox {
+     display: flex;
+     flex-direction: column;
+     justify-content: left;
+     align-items: left;
+     margin: 2%;
+}
+
+/******************************************
+/* ADDITIONAL STYLES - companies.html
+/*******************************************/
